update the docs folder

--- a/src/app/pages/beauty/beauty.component.html
+++ b/src/app/pages/beauty/beauty.component.html
@@ -4,18 +4,19 @@
   <main class="container">
     <h1 class="title">Beauty Photography</h1>
 
+    <app-gallery-grid [category]="'beauty'"></app-gallery-grid>
     <p class="description">
       Capturing the essence of beauty through lens. Specialized in cosmetics, skincare,
       and beauty product campaigns.
     </p>
 
     <!-- Gallery section placeholder -->
-    <div class="gallery-placeholder">
+    <!-- <div class="gallery-placeholder"> -->
         
       <!-- Future gallery grid will be inserted here -->
-      <p class="placeholder-text">Gallery images will appear here...</p>
-             <app-gallery-grid [category]="'beauty'"></app-gallery-grid>
+      <!-- <p class="placeholder-text">Gallery images will appear here...</p> -->
+             
 
-    </div>
+    <!-- </div> -->
   </main>
 </div>
