--- a/src/app/pages/fashion/fashion.component.html
+++ b/src/app/pages/fashion/fashion.component.html
@@ -3,14 +3,14 @@
 
   <main class="container">
     <h1 class="title">Fashion Photography</h1>
+           <app-gallery-grid [category]="'fashion'"></app-gallery-grid>
 
     <p class="description">
       Editorial and commercial fashion photography for leading brands and magazines.
     </p>
 
     <!-- Placeholder for gallery -->
-    <div class="gallery-placeholder">
-       <app-gallery-grid [category]="'fashion'"></app-gallery-grid>
-    </div>
+    <!-- <div class="gallery-placeholder">
+    </div> -->
   </main>
 </div>
