--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,17 +1,21 @@
 <header class="header">
   <div class="logo">PB</div>
 
-  <nav class="nav">
-    <!-- <a routerLink="/">Home</a> -->
-    <a (click)="navigate('/')"  routerLink="/">Home</a>
-    <a (click)="navigate('/beauty')"  routerLink="/beauty">Beauty</a>
-    <a (click)="navigate('/fashion')"  routerLink="/fashion">Fashion</a>
-    <!-- <a routerLink="/celebrities">Celebrities</a>
-    <a routerLink="/advertising">Advertising</a>
-    <a routerLink="/jewellery">Jewellery</a>
-    <a routerLink="/editorial">Editorial</a> -->
-    <a (click)="navigate('/contact')"  routerLink="/contact">Contact</a>
-    <a (click)="navigate('/about')"  routerLink="/about">About</a>
+  <!-- Hamburger (visible only on mobile) -->
+  <div class="hamburger" (click)="toggleMenu()">&#9776;</div>
+
+  <!-- Navigation Menu -->
+  <nav class="nav" [class.active]="menuOpen">
+    <a (click)="navigate('/')" routerLink="/">Home</a>
+    <a (click)="navigate('/beauty')" routerLink="/beauty">Beauty</a>
+    <a (click)="navigate('/fashion')" routerLink="/fashion">Fashion</a>
+    <a (click)="navigate('/Product')" routerLink="/Product">Product</a>
+    <a (click)="navigate('/kids')" routerLink="/kids">Kids</a>
+    <a (click)="navigate('/ecommerce')" routerLink="/ecommerce">E-commerce</a>
+    <a (click)="navigate('/wedding')" routerLink="/wedding">Wedding</a>
+    <a (click)="navigate('/contact')" routerLink="/contact">Contact</a>
+    <a (click)="navigate('/about')" routerLink="/about">About</a>
   </nav>
-   <div class="contact">+91-8395993889</div>
+
+  <div class="contact">+91-8395993889</div>
 </header>
