--- a/src/app/pages/fashion/fashion.component.css
+++ b/src/app/pages/fashion/fashion.component.css
@@ -4,15 +4,16 @@
 }
 
 .container {
-  max-width: 1100px;
+  /* max-width: 1100px; */
   margin: 0 auto;
-  padding: 48px 16px;
+  /* padding: 48px 16px; */
 }
 
 .title {
   font-size: 36px;
   font-weight: bold;
-  margin-bottom: 24px;
+  text-align: center;
+  /* margin-bottom: 24px; */
 }
 
 .description {
