All section added

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
     <a (click)="navigate('/')" routerLink="/">Home</a>
     <a (click)="navigate('/beauty')" routerLink="/beauty">Beauty</a>
     <a (click)="navigate('/fashion')" routerLink="/fashion">Fashion</a>
-    <a (click)="navigate('/Product')" routerLink="/Product">Product</a>
+    <a (click)="navigate('/product')" routerLink="/product">Product</a>
     <a (click)="navigate('/kids')" routerLink="/kids">Kids</a>
     <a (click)="navigate('/ecommerce')" routerLink="/ecommerce">E-commerce</a>
     <a (click)="navigate('/wedding')" routerLink="/wedding">Wedding</a>
